# UniiFance

./: .gitignore  404.html  README.md  index.html  mlflow.db  model_monitoring_report.html  objects.inv  pyproject.toml
dados/: index.html
evaluation/: index.html
monitoring/: index.html
predict/: index.html
primeira-etapa/: modelo_final.pkl  primeiro-notebook.ipynb
projeto/: Makefile  mkdocs.yml
projeto/config/: config.yaml
projeto/docs/: dados.md  evaluation.md  index.md  monitoring.md  predict.md  train.md  utils.md
projeto/models/: modelo.joblib
projeto/notebooks/: 01-baseline-model-mlflow.ipynb  02-hyperparameter.ipynb  03-select-best-model-mlflow.ipynb  04-train-final-model.ipynb  05-model-to-production.ipynb  06-use-model-from-production.ipynb  07-predict-from-mlflow.ipynb  testes.ipynb
projeto/src/data/: data_load.py  data_preprocess.py  data_transformation.py  data_validation.py
projeto/src/deploy/aws/: deployment.py  inference.py
projeto/src/deploy/azure/: __init__.py  inderence.py  inference.py
projeto/src/evaluation/: classifier_eval.py
projeto/src/monitoring/: monitor.py
projeto/src/predict/: predict.py
projeto/src/train/: hyperparameter.py  train.py
projeto/src/utils/: utils.py
search/: search_index.json
segunda-etapa/notebooks/: modelo.joblib  preprocessor.joblib  segundo-notebook.ipynb
train/: index.html
utils/: index.html
