[tool.poetry]
name = "diciplina_mlflow"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.3.2"
pandera = "^0.17.2"
feature-engine = "^1.6.2"
mlflow = "^2.10.0"
structlog = "^24.1.0"
shap = "^0.44.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
