[tool.poetry]
name = "diciplina_mlflow"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.3.2"
pandera = "^0.17.2"
feature-engine = "^1.6.2"
mlflow = "^2.10.0"
structlog = "^24.1.0"
shap = "^0.44.1"
hyperopt = "^0.2.7"
ruff = "^0.2.1"
awscli = "^1.32.36"
boto3 = "^1.34.36"
azure-ai-ml = "^1.13.0"
azure-identity = "^1.15.0"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.14.0"
evidently = "^0.4.15"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 79
indent-width = 4

[tool.ruff.lint]
fixable = ["I"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
